# sia-storage-sdk

./: .gitignore  Cargo.toml  IndexdSDK.podspec  LICENSE  Package.swift  README.md  SiaStorageSDK.podspec
.github/workflows/: kotlin.yml  node.yml  python.yml  swift.yml
examples/kotlin/: README.md  build.gradle.kts
examples/kotlin/src/main/kotlin/: Example.kt
examples/node/: example.mjs
examples/python/: README.md  example.py
examples/swift/: Package.swift
examples/swift/Sources/: main.swift
kotlin/: README.md  build.gradle.kts  settings.gradle.kts  uniffi.toml
kotlin/src/main/kotlin/sia/indexd/: Wrappers.kt
kotlin/src/main/kotlin/tech/sia/indexdsdk/: Wrappers.kt
kotlin/src/test/kotlin/sia/indexd/: SdkTest.kt
kotlin/src/test/kotlin/tech/sia/indexdsdk/: SdkTest.kt
node/: README.md  build.sh  wrappers.d.ts  wrappers.js
python/: README.md  pyproject.toml
python/sia_indexd/: __init__.py  wrappers.py
python/sia_storage/: __init__.py  wrappers.py
python/sia_storage_sdk/: __init__.py  wrappers.py
src/: lib.rs
swift/: README.md  build.sh  uniffi.toml
swift/Sources/IndexdSDK/: IndexdSDK.swift
swift/Sources/SiaStorageSDK/: SiaStorageSDK.swift  Wrappers.swift
