[package]
name = "sia_storage_sdk"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-storage-sdk"
license = "MIT"
description = "UniFFI bindings for the Sia Storage SDK"
authors = ["The Sia Foundation"]

[lib]
name = "sia_storage_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
sia_storage_ffi = { git = "https://github.com/SiaFoundation/sia-sdk-rs.git", version="0.6.1" }
uniffi = { version = "=0.29.4", features = ["cli", "tokio"] }

[[bin]]
name = "uniffi-bindgen"
