[package]
name = "sia_storage_sdk"
version = "0.7.0"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-storage-sdk"
license = "MIT"
description = "UniFFI bindings for the Sia Storage SDK"
authors = ["The Sia Foundation"]

[lib]
name = "sia_storage_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
sia_storage_ffi = { git = "https://github.com/SiaFoundation/sia-sdk-rs.git", rev = "2551ed9153dc78570a8c2442f04d79027e2c3667" }
uniffi = { version = "=0.31.1", features = ["cli", "tokio"] }

[[bin]]
name = "uniffi-bindgen"
