[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "sia-storage-sdk"
description = "Python SDK for interacting with the Sia decentralized storage network"
dynamic = ["version"]
requires-python = ">=3.9"
license = "MIT"
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]
authors = [
    { name = "The Sia Foundation" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://sia.tech"
Repository = "https://github.com/SiaFoundation/indexd-sdk"
Documentation = "https://github.com/SiaFoundation/indexd-sdk"

[tool.maturin]
manifest-path = "../Cargo.toml"
bindings = "uniffi"
module-name = "sia_storage_sdk"
python-source = "."
compatibility = "manylinux2014"
